// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WYSIWYGRender /> should render correctly 1`] = `
<div
  className="myClass ql-editor wysiwyg-render"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<div>Little test</div>",
    }
  }
/>
`;

exports[`<WYSIWYGRender /> should render correctly with predefined content 1`] = `
<div
  className="myClass ql-editor wysiwyg-render"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<div>Little test</div>",
    }
  }
/>
`;

exports[`<WYSIWYGRender /> should render correctly with tagName 1`] = `
<div
  className="myClass ql-editor wysiwyg-render"
>
  <i
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div>Little test</div>",
      }
    }
  />
</div>
`;
